--- a/src/app/components/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/components/admin-sidebar/admin-sidebar.component.html
@@ -11,12 +11,12 @@
     </div>
     <div class="orders">
        
-        <img src="../../../assets/images/Vector.png"/>
+        <img src="../../../assets/images/Vector.png"/ style="width:20px;">
         <a href="">Orders</a>
     </div>
   
    <div>
-       <img src="../../../assets/images/Vector (1).png" />
+       <img src="../../../assets/images/Vector (1).png" style="width:20px;"/>
     <a href="">Products</a>
    </div>
    
